[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mdwt_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Nestor Arocha", email="n@nestorarocha.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPLv3"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://codeberg.org/nesaro/mdwt"
Issues = "https://github.com/pypa/sampleproject/issues"
