[metadata]
name = mdwt
version = attr: mdwt.VERSION
author = Nestor Arocha
author_email = n@nestorarocha.com
description = Markdown wiki tools
long_description = file: README.md, CHANGELOG.md, LICENSE
python_requires = >=3.7
license = GPL-3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    marko
    PyYAML
    networkx
    matplotlib
    scipy
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    mdwt = mdwt.mdwt:main
    parse_wiki_ttl = mdwt.parse_wiki_ttl:main

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
